--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <p>Welcome to SneakShop!</p>
+        <div class="container">
+          <div class="row row-cols-3">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
