--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -10,6 +10,9 @@
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['admin/usuario/plist']">Usuario</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['login']">Login</a>
           </li>
           <!-- <li class="nav-item">
