--- a/src/app/component/shared/routed/logout/logout.component.html
+++ b/src/app/component/shared/routed/logout/logout.component.html
@@ -1,1 +1,17 @@
-<p>logout works!</p>
+<div class="row justify-content-center">
+    <div class="col-md-5 control-group text-center my-3">
+        <div class="aler alert-danger" role="alert">
+
+            <h3 class="">¿Seguro que quiere cerrar sesión?</h3>
+
+            <div class="d-grid gap-2 d-md-block mt-3 d-md-flex justify-content-md-center">
+                <button class="btn btn-danger mx-1" (click)="closeSession()"><i
+                        [ngClass]="oMetadataService.getIcon('logout')"></i>Cerrar sesión</button>
+                <a class="btn btn-primary mx-1" [routerLink]="['/home']"><i
+                        [ngClass]="oMetadataService.getIcon('home')"></i>Menú principal</a>
+                <button class="btn btn-success mx-1" (click)="oLocation.back()"><i
+                        [ngClass]="oMetadataService.getIcon('return')"></i>Volver</button>
+            </div> 
+        </div>
+    </div>
+</div>
