--- a/src/app/component/shared/routed/login/login.component.html
+++ b/src/app/component/shared/routed/login/login.component.html
@@ -43,10 +43,8 @@
                         </div>
                         <div class="col-12">
                             <div class="control-group text-center mt-3">
-                                <button class="btn btn-danger m-2" (click)="loginAdmin()"><i
-                                        [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>Admin</button>
-                                <button class="btn btn-success m-2" (click)="loginUsuario()"><i
-                                        [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>Usuario</button>
+                                <button class="btn btn-danger m-2" (click)="loginAdmin()"><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>Admin</button>
+                                <button class="btn btn-success m-2" (click)="loginUsuario()"><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>Usuario</button>
                             </div>
                         </div>
 
