--- a/src/app/component/shared/routed/login/login.component.html
+++ b/src/app/component/shared/routed/login/login.component.html
@@ -37,7 +37,7 @@
                             <div class="control-group text-center mt-3">
                                 <button type="submit" class="btn btn-primary"><i
                                         [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>
-                                    Entrar
+                                    Acceder
                                 </button>
                             </div>
                         </div>
