--- a/src/app/component/application/usuario/usuario-detail-admin-unrouted/usuario-detail-admin-unrouted.component.html
+++ b/src/app/component/application/usuario/usuario-detail-admin-unrouted/usuario-detail-admin-unrouted.component.html
@@ -4,20 +4,20 @@
           <table class="table table-bordered table-striped">
               <tbody>
                   <tr>
-                      <th>Id</th>
+                      <th>ID</th>
                       <td>{{oUsuario.id}}</td>
                   </tr>
                   <tr>
-                      <td>Name</td>
+                      <td>Nombre</td>
                       <td>{{oUsuario.nombre}}</td>
                   </tr>
                   <tr>
-                      <td>Email</td>
+                      <td>E-Mail</td>
                       <td>{{oUsuario.email}}</td>
                   </tr>
                   <tr>
-                      <td>Usertype</td>
-                      <td>{{oUsuario.tipousuario.id}}</td>
+                      <td>Tipo Usuario</td>
+                      <td>{{oUsuario.tipoUsuario.id}}</td>
                   </tr>
               </tbody>
           </table>
