--- a/src/app/component/application/tipousuario/routed/admin/tipousuario-view-admin/tipousuario-view-admin.component.html
+++ b/src/app/component/application/tipousuario/routed/admin/tipousuario-view-admin/tipousuario-view-admin.component.html
@@ -1,3 +1,9 @@
-<p>
-  tipousuario-view-admin works!
-</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center mb-5">🔽Vista del TipoUsuario con ID {{id}}🔽</h1>
+            <app-tipousuario-detail-admin-unrouted [id]="id"></app-tipousuario-detail-admin-unrouted>
+        </div>
+    </div>
+  </div>
+  
