--- a/src/app/component/application/tipousuario/routed/admin/tipousuario-edit-admin/tipousuario-edit-admin.component.html
+++ b/src/app/component/application/tipousuario/routed/admin/tipousuario-edit-admin/tipousuario-edit-admin.component.html
@@ -1,3 +1,42 @@
-<p>
-  tipousuario-edit-admin works!
-</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center mb-5">Editar TipoUsuario</h1>
+
+      <form novalidate [formGroup]="oForm" *ngIf="oForm" (ngSubmit)="onSubmit()">
+
+        <div class="mb-3 row">
+          <label for="inputnombre" class="col-sm-2 col-form-label">Nombre</label>
+          <div class="col-sm-4 has-validation">
+            <input type="text" class="form-control" [ngClass]="{'is-valid' : oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['required'] &&
+              oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['minlength']
+                && oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['maxlength'],
+                'is-invalid' :  oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['minlength']
+                ||  oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['maxlength'] ||
+                oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['required']}" id="inputnombre"
+              formControlName="nombre">
+            <div id="inputnombreFeedback" class="invalid-feedback"
+              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['minlength']">
+              La longitud mínima es de 5 caracteres.
+            </div>
+            <div id="inputnombreFeedback" class="invalid-feedback"
+              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['maxlength']">
+              La longitud máxima es de 10 caracteres.
+            </div>
+            <div id="inputnombreFeedback" class="invalid-feedback"
+              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['required']">
+              El campo es obligatorio.
+            </div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary" [disabled]="oForm.invalid || !oForm.dirty">Guardar</button>
+
+
+
+      </form>
+
+    </div>
+  </div>
+</div>
+
