--- a/src/app/component/application/tipousuario/routed/admin/tipousuario-plist-admin/tipousuario-plist-admin.component.html
+++ b/src/app/component/application/tipousuario/routed/admin/tipousuario-plist-admin/tipousuario-plist-admin.component.html
@@ -1,42 +1,60 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col">
-      <h1 class="text-center mb-5">Editar TipoUsuario</h1>
-
-      <form novalidate [formGroup]="oForm" *ngIf="oForm" (ngSubmit)="onSubmit()">
-
-        <div class="mb-3 row">
-          <label for="inputnombre" class="col-sm-2 col-form-label">Nombre</label>
-          <div class="col-sm-4 has-validation">
-            <input type="text" class="form-control" [ngClass]="{'is-valid' : oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['required'] &&
-              oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['minlength']
-                && oForm.controls.nombre.dirty && !oForm.controls.nombre.errors?.['maxlength'],
-                'is-invalid' :  oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['minlength']
-                ||  oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['maxlength'] ||
-                oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['required']}" id="inputnombre"
-              formControlName="nombre">
-            <div id="inputnombreFeedback" class="invalid-feedback"
-              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['minlength']">
-              La longitud mínima es de 5 caracteres.
-            </div>
-            <div id="inputnombreFeedback" class="invalid-feedback"
-              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['maxlength']">
-              La longitud máxima es de 10 caracteres.
-            </div>
-            <div id="inputnombreFeedback" class="invalid-feedback"
-              *ngIf="oForm.controls.nombre.dirty &&  oForm.controls.nombre.errors?.['required']">
-              El campo es obligatorio.
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="btn btn-primary" [disabled]="oForm.invalid || !oForm.dirty">Guardar</button>
-
-
-
-      </form>
-
+      <h1 class="text-center mb-5 text-decoration-underline">Listado de TipoUsuario</h1>
+      <div class="col-md text-end d-flex justify-content-center align-items-center mb-3 ">
+        <a [routerLink]="['/admin/tipousuario/new']" class="btn btn-success mx-3">Añadir TipoUsuario</a>
+        <app-search-unrouted [placeHolder]="'Buscar'" (onSearch)="setFilter( $event )"></app-search-unrouted>
+        <app-dropdown-register-page class="mx-2" [PageSize]="responseFromServer?.numberOfElements"
+        (eeRpp)="this.setRpp($event)">
+      </app-dropdown-register-page>
+      </div>
+      <div class="col-md d-flex">
+        <app-pagination-unrouted [nPage]="responseFromServer?.number + 1" [nTotalPages]="responseFromServer?.totalPages"
+          (eePage)="setPage($event)"></app-pagination-unrouted>
+      </div>
+      <div class="col-md text-end">
+        <h5 class="text-muted">Total de registros en la consulta {{responseFromServer?.totalElements}}</h5>
+      </div>
+      <table class="table table-bordered table-striped table-hover">
+        <thead class="table table-sm">
+          <tr>
+            <th (click)="setOrder('id')" >ID
+              <span *ngIf="sortField=='id'&&sortDirection=='asc'">🔼</span>
+              <span *ngIf="sortField=='id'&&sortDirection=='desc'">🔽</span>
+            </th>
+            <th (click)="setOrder('nombre')">Nombre
+              <span *ngIf="sortField=='nombre'&&sortDirection=='asc'">🔼</span>
+              <span *ngIf="sortField=='nombre'&&sortDirection=='desc'">🔽</span>
+            </th>
+            <th (click)="setOrder('usuarios')">Número de usuarios
+              <span *ngIf="sortField=='usuarios'&&sortDirection=='asc'">🔼</span>
+              <span *ngIf="sortField=='usuarios'&&sortDirection=='desc'">🔽</span>
+            </th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let tipousuario of responseFromServer?.content">
+            <td>{{tipousuario.id}} </td>
+            <td>{{tipousuario.nombre}}</td>
+            <td>{{tipousuario.usuarios}}</td>
+            <td>
+              <div class="btn-group "  role="group" aria-label="Herramientas">
+                <button class="btn btn-sm btn-info" [routerLink]="['/admin/tipousuario/view',tipousuario.id]">
+                  <i class="bi bi-eye-fill"></i>
+                </button>
+                <button class="btn btn-sm btn-secondary" [routerLink]="['/admin/tipousuario/edit',tipousuario.id]">
+                  <i class="bi bi-pencil-fill"></i>
+                </button>
+                <button class="btn btn-sm btn-danger" [routerLink]="['/admin/tipousuario/remove',tipousuario.id]">
+                  <i class="bi bi-trash-fill"></i>
+                </button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
-
