--- a/src/app/component/application/usuario/routed/admin/usuario-new-admin/usuario-new-admin.component.html
+++ b/src/app/component/application/usuario/routed/admin/usuario-new-admin/usuario-new-admin.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col">
-      <h1 class="text-center mb-5">Alta de User</h1>
+      <h1 class="text-center mb-5">Alta de Usuario</h1>
 
       <form novalidate [formGroup]="oForm" (ngSubmit)="onSubmit()">
 
@@ -12,7 +12,7 @@
           </div>
         </div>
 
-        // NOMBRE 
+ 
         <div class="mb-3-row">
           <label for="inputNombre" class="col-sm-2 col-form-label">Nombre</label>
           <div class="col-sm-4 has-validation">
@@ -34,7 +34,6 @@
           </div>
         </div>
 
-        // APELLIDO1 
 
         <div class="mb-3 row">
           <label for="inputApellido1" class="col-sm-2 col-form-label">Apellido 1</label>
@@ -61,7 +60,6 @@
       </div>
     </div>
 
-    // APELLIDO2
 
     <div class="mb-3 row">
       <label for="inputApellido2" class="col-sm-2 col-form-label">Apellido 2</label>
@@ -89,7 +87,6 @@
     </div>
 
 
-    // EMAIL
     <div class="mb-3 row">
       <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-4 has-validation">
@@ -109,7 +106,6 @@
       </div>
     </div>
 
-    // login 
     <div class="mb-3 row">
       <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
       <div class="col-sm-4 has-validation">
@@ -134,7 +130,6 @@
         </div>
 
 
-        // Tipousuario
         <div class="mb-3 row">
           <label for="inputTipousuario" class="col-sm-2 col-form-label">Tipousuario</label>
           <div class="col-sm-6 has-validation">
